--- a/ហ្គេមទាយលេខ/1.ហ្គេមទាយលេខ.md
+++ b/ហ្គេមទាយលេខ/1.ហ្គេមទាយលេខ.md
@@ -1,1 +1,3 @@
-
+#1.ហ្គេមទាយលេខ
+បង្កើតហ្គេមទាយលេខសាមញ្ញមួយដែលកម្មវិធីជ្រើសរើសលេខដោយចៃដន្យរវាងលេខ 1 ដល់ 100។ 
+អ្នកប្រើប្រាស់ត្រូវទាយលេខ ហើយកម្មវិធីនេះផ្តល់ការណែនាំប្រសិនបើការទាយខ្ពស់ពេក ឬទាបពេក។
